--- a/templates/website/index.html
+++ b/templates/website/index.html
@@ -5,8 +5,8 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container d-flex flex-column align-items-center" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Kelly Adams</h1>
-      <h2>I'm a professional illustrator from San Francisco</h2>
+      <h1>Behzad Abbasi</h1>
+      <h2>I am an intern Django developer from Iran</h2>
       <a href="{% url 'website:about' %}" class="btn-about">About Me</a>
     </div>
   </section><!-- End Hero -->
