adding language section to about.html
adding language section to about.html

--- a/templates/website/about.html
+++ b/templates/website/about.html
@@ -54,7 +54,44 @@
 
     </div>
   </section><!-- End About Section -->
+  <!-- ======= Facts Section ======= -->
+  <section id="facts" class="facts">
+    <div class="container" data-aos="fade-up">
 
+      <div class="section-title">
+        <h2>Languages</h2>
+      </div>
+
+      <div class="row counters">
+
+        <div class="col-lg-3 col-6 text-center">
+          <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1"
+            class="purecounter"></span>
+          <p>Azeri (native)</p>
+        </div>
+
+        <div class="col-lg-3 col-6 text-center">
+          <span data-purecounter-start="0" data-purecounter-end="75" data-purecounter-duration="1"
+            class="purecounter"></span>
+          <p>Turkish</p>
+        </div>
+
+        <div class="col-lg-3 col-6 text-center">
+          <span data-purecounter-start="0" data-purecounter-end="95" data-purecounter-duration="1"
+            class="purecounter"> </span>
+          <p>Persian</p>
+        </div>
+
+        <div class="col-lg-3 col-6 text-center">
+          <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="1"
+            class="purecounter"></span>
+          <p>English</p>
+        </div>
+
+      </div>
+
+    </div>
+  </section><!-- End Facts Section -->
   <!-- ======= Skills Section ======= -->
   <section id="skills" class="skills">
     <div class="container" data-aos="fade-up">
@@ -157,7 +194,8 @@
         <div class="col-lg-6">
           <h3 class="resume-title">Certificates</h3>
           <div class="resume-item">
-            <h4><a href='https://maktabkhooneh.org/certificates/MK-DBKW9I/'>Machine Vision and Image Processing with OpenCV</a></h4>
+            <h4><a href='https://maktabkhooneh.org/certificates/MK-DBKW9I/'>Machine Vision and Image Processing with
+                OpenCV</a></h4>
             <h5>2023/02/25</h5>
             <p><em>Maktabkhooneh</em></p>
           </div>
